add_executable(pico_emb main.c)

set_target_properties(pico_emb PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


# Depois (correto)
target_link_libraries(pico_emb pico_stdlib hardware_gpio hardware_pwm hardware_irq hardware_clocks)


# create map/bin/hex/uf2 file etc.
pico_add_extra_outputs(pico_emb)
